--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@ build
 eclipse
 run
 libs
+README.txt
+Paulscode SoundSystem CodecIBXM License.txt
+gradle.properties
+CREDITS-fml.txt
+LICENSE-new.txt
+Paulscode IBXM Library License.txt
+MinecraftForge-Credits.txt
+forge-1.11.2-13.20.0.2233-changelog.txt
